@@ -2,28 +2,12 @@ package me.frenz;
 
 import com.github.freva.asciitable.AsciiTable;
 import me.frenz.day01.Day01;
-import me.frenz.day02.Day02;
-import me.frenz.day03.Day03;
-import me.frenz.day04.Day04;
-import me.frenz.day05.Day05;
-import me.frenz.day06.Day06;
-import me.frenz.day07.Day07;
-import me.frenz.day08.Day08;
-import me.frenz.day09.Day09;
-import me.frenz.day10.Day10;
-import me.frenz.day11.Day11;
-import me.frenz.day12.Day12;
-import me.frenz.day13.Day13;
-import me.frenz.day14.Day14;
-import me.frenz.day15.Day15;
 
 import java.io.*;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import static java.util.stream.Collectors.toList;
 
 public class Main {
     public static void main(String[] args) {
@@ -45,20 +29,6 @@ public class Main {
         final HashMap<Integer, Day<?, ?>> days = new HashMap<>();
         int day = 0;
         days.put(++day, new Day01(loadInput(day)));
-        days.put(++day, new Day02(loadInput(day)));
-        days.put(++day, new Day03(loadInput(day)));
-        days.put(++day, new Day04(loadInput(day)));
-        days.put(++day, new Day05(loadInput(day)));
-        days.put(++day, new Day06(loadInput(day)));
-        days.put(++day, new Day07(loadInput(day)));
-        days.put(++day, new Day08(loadInput(day)));
-        days.put(++day, new Day09(loadInput(day)));
-        days.put(++day, new Day10(loadInput(day)));
-        days.put(++day, new Day11(loadInput(day)));
-        days.put(++day, new Day12(loadInput(day)));
-        days.put(++day, new Day13(loadInput(day)));
-        days.put(++day, new Day14(loadInput(day)));
-        days.put(++day, new Day15(loadInput(day)));
         return days;
     }
 
@@ -72,7 +42,7 @@ public class Main {
         final InputStream in = ClassLoader.getSystemResourceAsStream(fileName);
         if (in != null) {
             try (BufferedReader r = new BufferedReader(new InputStreamReader(in))) {
-                return r.lines().collect(toList());
+                return r.lines().toList();
             } catch (IOException e) {
                 throw new UncheckedIOException(e);
             } catch (NullPointerException e) {
